--- a/app/src/main/res/layout/layout2.xml
+++ b/app/src/main/res/layout/layout2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    android:layout_margin="3dp"
     android:elevation="15dp"
     android:paddingVertical="5dp"
     app:cardCornerRadius="13dp">
@@ -17,7 +17,7 @@
         <TextView
             android:id="@+id/textView21"
             android:layout_width="120dp"
-            android:layout_height="29dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
             android:text="TextView"
